k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wheres-fluffy-service
  namespace: vsamarin
spec:
  selector:
    app: wheres-fluffy-application
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
  type: ClusterIP
